--- a/SuperMarket_Client/Areas/Admin/Views/Home/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
     <!-- /.card-header -->
     <div class="flex-card">
-        <a href="">
+        <a asp-action="Index" asp-controller="Product" asp-area="Admin">
             <div class="manage-option">
                 <i class="fa fa-archive" aria-hidden="true"></i>
             
@@ -18,7 +18,7 @@
 
 
     <div class="flex-card">
-        <a href="">
+        <a asp-action="Index" asp-controller="Order" asp-area="Admin">
             <div class="manage-option">
                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
                 <p>Order Management</p>
@@ -28,7 +28,7 @@
 
 
     <div class="flex-card">
-        <a href="">
+        <a asp-action="OtherPages" asp-controller="Home" asp-area="Admin">
             <div class="manage-option">
               <i class="fa fa-list" aria-hidden="true"></i>
                 <p>Others</p>
@@ -38,7 +38,7 @@
 
 
     <div class="flex-card">
-        <a href="">
+        <a asp-action="Report" asp-controller="Home" asp-area="Admin">
             <div class="manage-option">
      
            	<i class="fas fa-fw fa-chart-area"></i>
