--- a/SuperMarket_Client/Areas/Admin/Views/Order/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Order/Index.cshtml
@@ -14,7 +14,7 @@
 	</div>
 	<div class="option-container">
 
-		<a class="option" asp-action="" asp-controller="" asp-area="">
+		<a class="option" asp-action="Index" asp-controller="Order" asp-area="Admin">
 			All
 		</a>
 		<a class="option" asp-action="Index" asp-controller="Order" asp-area="Admin" asp-route-status ="@SD.StatusApproved">
