--- a/SuperMarket_Client/Views/Shared/Components/CategoryList/CategoryList.cshtml
+++ b/SuperMarket_Client/Views/Shared/Components/CategoryList/CategoryList.cshtml
@@ -4,7 +4,7 @@
 @foreach (var item in Model)
 {
 	<li>
-		<a href="#">
+		<a asp-action="Index" asp-controller="Product" asp-area="Customer" asp-route-cateID="@item.CategoryId">
 			<span><img src="@item.CategoryImg" width="30px" /></span>
 			<span class="menu-title">@item.CategoryName</span>
 		</a>
