--- a/SuperMarket_Client/Areas/Admin/Views/Coupon/NewCoupon.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Coupon/NewCoupon.cshtml
@@ -34,9 +34,14 @@
                 <input asp-for="Count" type="number" class="form-control" />
                 <span asp-validation-for="Count" class="text-danger"></span>     
             </div>
+              <div class="form-group">
+                <label class="control-label">Description</label>
+                <input asp-for="Description" type="text" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>     
+            </div>
            <div class="form-group">
               
-                <input type="submit" value="Add New Coupon" class="form-control" />
+                <input type="submit" value="Add New Coupon" class="form-control btn-primary" />
                 
             </div>
         </form>
