--- a/SuperMarket_Client/Areas/Admin/Views/Stock/UpdateStock.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Stock/UpdateStock.cshtml
@@ -11,21 +11,23 @@
 <div class="container">
     <div class="d-flex justify-content-center col-md-8 offset-2 ">
 
-        <form class="flex-fill" asp-action="AddStock" asp-area="Admin" asp-controller="Stock" method="post">
+        <form class="flex-fill" asp-action="UpdateStock" asp-area="Admin" asp-controller="Stock" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <h3 class="control-label">Add Stock </h3>
-               <h5>Product : <span style="color:midnightblue">@Model.Product.ProductName</span></h5>
-               <h5>Branch : <span style="color:midnightblue">@Model.Branch.BranchName</span></h5>
-               <h5>Current Stock : <span style="color:midnightblue">@Model.Count</span></h5>
+                <h3 class="control-label">Update Stock </h3>
+                <h5>Product : <span style="color:midnightblue">@Model.Product.ProductName</span></h5>
+                <h5>Branch : <span style="color:midnightblue">@Model.Branch.BranchName</span></h5>
+                <h5>Current Stock : <span style="color:midnightblue">@Model.Count</span></h5>
+             
             </div>
                 <input readonly hidden asp-for="StockId" value="@Model.StockId" />
             <div class="form-group">
-                <label  class="control-label" > Number of addition unit: </label>
+                <label  class="control-label" > Update stock of Product </label>
                 <input name="number" class="form-control" type="number" min="1" max="100" />
                 
             </div>
             <hr />
+               <h5 style="color:red">**Update Stock will completely change your stock! Please make sure you are allowed to do this action!</h5>
             <div class="form-group">
 
                 <input type="submit" value="Add Stock" class="form-control" />
