--- a/SuperMarket_Client/Views/Shared/Components/CartList/CartList.cshtml
+++ b/SuperMarket_Client/Views/Shared/Components/CartList/CartList.cshtml
@@ -5,6 +5,7 @@
 
 
 <a class="cart_btn" href="#"><span class="flaticon-shopping-cart icon"><span id="CartCount" class="badge bgc-thm">@ViewBag.CartCount</span></span> <span class="price">@ViewBag.totalCart.ToString("c")</span></a>
+<input type="hidden" value="@ViewBag.cartId" id="cartIdGlobal" />
 <ul class="dropdown_content" style="overflow:scroll">
     @foreach (var item in Model)
     {
