--- a/SuperMarket_Client/Areas/Customer/Views/Customer/Order.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Customer/Order.cshtml
@@ -5,7 +5,7 @@
 
 @if(@TempData["MsgCancelOrder"] != null)
 {
-   <p id="msgCancel"> @TempData["MsgCancelOrder"]</p>
+@*   <p id="msgCancel"> @TempData["MsgCancelOrder"]</p>*@
     @section Scripts{
         <script type="text/javascript">
             $(function() {
