--- a/SuperMarket_Client/Areas/Admin/Views/Product/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Product/Index.cshtml
@@ -4,47 +4,43 @@
 }
 <h3>@ViewData["Title"]</h3>
 
-<a class="btn btn-outline-primary" href="/Admin/Product/CreateProduct">Create Product</a> | 
+<a class="btn btn-outline-primary" href="/Admin/Product/CreateProduct">Create Product</a> |
 <a class="btn btn-outline-primary" href="/Admin/Home/Index">Back to Home</a>
 <hr />
+<div class="container">
+	<table class="table" id="ProductTable">
+		<thead>
+			<tr>
 
-<table class="table" id="ProductTable">
-	<thead>
-		<tr>
-
-			<th>
-				Product Name
-			</th>
-			<th>
-				Title
-			</th>
-			<th>
-				Created Date
-			</th>
-			<th>
-				Manufacture Date
-			</th>
-			<th>
-				Expiry Date
-			</th>
-			<th>
-				Weight
-			</th>
-			<th>
-				Category
-			</th>
-			<th>
-				Brand
-			</th>
-			<th>
-				Price
-			</th>
-			<th>
-
-			</th>
-		</tr>
-	</thead>
-</table>
+				<th>
+					Product Name
+				</th>
+				<th>
+					Title
+				</th>
+				<th>
+					Created Date
+				</th>
+			
+				<th>
+					Weight
+				</th>
+				<th>
+					Category
+				</th>
+				<th>
+					Brand
+				</th>
+				<th>
+					Price
+				</th>
+				<th>
+					Action
+				</th>
+			</tr>
+		</thead>
+	</table>
+</div>
 @section Scripts{
 	<script>
 		var dataTable;
@@ -57,30 +53,28 @@
 					"url": "/Admin/Product/GetAllProduct"
 				},
 				"columns": [
-					{ "data": "productName", "width": "15%" },
-					{ "data": "title", "width": "15%" },
-					{ "data": "createdDate", "width": "15%" },
-					{ "data": "manufactureDate", "width": "15%" },
-					{ "data": "expiryDate", "width": "15%" },
-					{ "data": "weight", "width": "15%" },
-					{ "data": "brand_Category.category.categoryName", "width": "15%" },
-					{ "data": "brand_Category.brand.brandName", "width": "15%" },
-					{ "data": "price", "width": "15%" },
+					{ "data": "productName", "width": "10%" },
+					{ "data": "title", "width": "10%" },
+					{ "data": "createdDate", "width": "10%" },
+					{ "data": "weight", "width": "10%" },
+					{ "data": "brand_Category.category.categoryName", "width": "10%" },
+					{ "data": "brand_Category.brand.brandName", "width": "10%" },
+					{ "data": "price", "width": "10%" },
 					{
 						"data": "productId",
 						"render": function(data) {
 							return `<div class="w-75 btn-group" role="group">
 
-												</a>
-												<a onClick=Delete('/Admin/Product/DeleteProduct/${data}')  class="btn btn-outline-primary" />Delete
-												</a>
-												<a href="/Admin/Product/UpdateProduct?id=${data}"  class="btn btn-outline-primary" />Update
-												</a>
-												<a href="/Admin/Product/Stock?id=${data}"  class="btn btn-outline-primary" />Stock
-												</a>
-												</div>`
+														</a>
+														<a onClick=Delete('/Admin/Product/DeleteProduct/${data}')  class="btn btn-outline-primary" />Delete
+														</a>
+														<a href="/Admin/Product/UpdateProduct?id=${data}"  class="btn btn-outline-primary" />Update
+														</a>
+														<a href="/Admin/Product/Stock?id=${data}"  class="btn btn-outline-primary" />Stock
+														</a>
+														</div>`
 						},
-						"width": "15%"
+						"width": "10%"
 					}
 				]
 			});
