--- a/SuperMarket_Client/Areas/Customer/Views/StoreLocator/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/StoreLocator/Index.cshtml
@@ -48,9 +48,9 @@
   <section class="our-contact bgc-f5 p0">
     <div class="container-fluid p0">
       <div class="row">
-        <div class="col-lg-7" style="background-color:rgb(71,113,227)" >
+        <div class="col-lg-7" style="background-color:	#FFF0F5" >
           <div class="h700" style="display: flex;align-items: center;justify-content: center;" id="map-canvas">
-              <p style="font-size:100px; " class="text-center text-light">Contact Us</p>
+             <img src="~/Asset/images/about/contactus.jpg" />
           </div>
         </div>
         <div class="col-lg-5">
