update UI index home

--- a/SuperMarket_Client/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/SuperMarket_Client/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -4,12 +4,14 @@
     ViewData["Title"] = "Reset password";
 }
 
-<h1>@ViewData["Title"]</h1>
-<h2>Reset your password.</h2>
-<hr />
+
 <div class="row">
-    <div class="col-md-4">
-        <form method="post">
+
+    <div class="col-4 offset-4 ">
+        <h1>@ViewData["Title"]</h1>
+        <h2>Reset your password.</h2>
+        <hr />
+        <form method="post" class="login_form">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input asp-for="Input.Code" type="hidden" />
             <div class="form-floating">
@@ -27,7 +29,7 @@
                 <label asp-for="Input.ConfirmPassword" class="form-label"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Reset</button>
+            <button type="submit" class="w-100 btn btn-lg btn-log btn-thm">Reset</button>
         </form>
     </div>
 </div>
