--- a/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
@@ -115,7 +115,15 @@
 												}
 												<div class="thumb_info">
 													<ul class="mb0">
-														<li class="addToCartHome" data-toggle="tooltip" data-placement="top" title="Add To Cart" data-productid=@data.ProductId><span style="font-size:20px;" class="flaticon-shopping-cart"></span></li>
+														<li  data-toggle="tooltip" data-placement="top" title="View Detail">
+															<a href="/Customer/Product/Details?id=@data.ProductId">
+																<i class="fa fa-info-circle" aria-hidden="true"></i>
+															</a>
+														</li>
+
+														<li  data-toggle="tooltip" data-placement="top" title="Compare Product">
+															<a href="/Customer/Product/CompareProduct?CategoryId=@data.Product.Brand_Category.CategoryId&amp;productId=@data.ProductId"><span class="flaticon-search"></span></a>
+														</li>
 													</ul>
 												</div>
 											</div>
@@ -140,9 +148,9 @@
 														<div class="sell float-start">Weight: <span class="fwb">@data.Product.Weight</span></div>
 														<div class="stock float-end">Available: <span class="fwb">@data.Count</span></div>
 													</div>
-													<a href="/Customer/Product/Details?id=@data.ProductId" class="cart_btn btn-thm">
-														<span class="flaticon-search mr10"></span>VIEW DETAIL
-													</a>
+													<button class="addToCartHome cart_btn btn-thm" data-toggle="tooltip" data-placement="top" title="Add To Cart" data-productid=@data.ProductId >
+																<span  class="flaticon-shopping-cart"></span> &nbsp; ADD TO CART
+													</button>
 												</div>
 											</div>
 										</div>
@@ -173,7 +181,15 @@
 														}
 														<div class="thumb_info" >
 															<ul class="mb0">
-																<li class="addToCartHome" data-toggle="tooltip" data-placement="top" title="Add To Cart" data-productid=@data.ProductId><span style="font-size:20px;" class="flaticon-shopping-cart"></span></li>
+																<li  data-toggle="tooltip" data-placement="top" title="View Detail">
+																	<a href="/Customer/Product/Details?id=@data.ProductId">
+																		<i class="fa fa-info-circle" aria-hidden="true"></i>
+																	</a>
+																</li>
+
+																<li  data-toggle="tooltip" data-placement="top" title="Compare Product">
+																	<a href="/Customer/Product/CompareProduct?CategoryId=@data.Product.Brand_Category.CategoryId&amp;productId=@data.ProductId"><span class="flaticon-search"></span></a>
+																</li>
 															</ul>
 														</div>
 													</div>
@@ -198,9 +214,9 @@
 																<div class="sell float-start">Weight: <span class="fwb">@data.Product.Weight</span></div>
 																<div class="stock float-end">Available: <span class="fwb">@data.Count</span></div>
 															</div>
-															<a href="/Customer/Product/Details?id=@data.ProductId" class="cart_btn btn-thm">
-																<span class="flaticon-search mr10"></span>VIEW DETAIL
-															</a>
+															<button class="addToCartHome cart_btn btn-thm" data-toggle="tooltip" data-placement="top" title="Add To Cart" data-productid=@data.ProductId >
+																<span  class="flaticon-shopping-cart"></span> &nbsp; ADD TO CART
+															</button>
 														</div>
 													</div>
 												</div>
