--- a/SuperMarket_Client/wwwroot/Asset/css/style.css
+++ b/SuperMarket_Client/wwwroot/Asset/css/style.css
@@ -20833,9 +20833,9 @@ canvas#myChart{
   position: relative;
   text-align: center;
 }
-.shop_item .thumb img{
-/*width:auto;
-height:250px;*/
+.shop_item .thumb img {
+    width: auto;
+    min-height: 250px;
 }
 .shop_item .offer_badge{
   left: 0;
@@ -20870,9 +20870,7 @@ height:250px;*/
 .shop_item .offer_badge ul li a.comison_rate{
   background-color: #CF3E3B;
 }
-.home3_style.shop_item.style2 .offer_badge{
-  top: 30px;
-}
+
 .shop_item .thumb_info{
   opacity: 0;
   position: absolute;
@@ -20912,13 +20910,6 @@ height:250px;*/
 .shop_item .thumb_info ul li:hover a{
   color: #86BC42;
 }
-.thumb_info.home6_style ul li:hover{
-  border: 1px solid #F2B23E;
-  cursor: pointer;
-}
-.thumb_info.home6_style ul li:hover a{
-  color: #F2B23E;
-}
 .shop_item .details .title{
   color: #4F4F4F;
   font-size: 12px;
@@ -20956,25 +20947,8 @@ height:250px;*/
 .shop_item:hover .details .si_footer .price{
   opacity: 0;
 }
-.home8_style.shop_item:hover .details .si_footer .price{
-  opacity: 1;
-}
-.home8_style.shop_item.single_slider .thumb img{
-  margin: 0 auto;
-  max-width: 200px;
-  width: 100%;
-}
-.shop_item.home6_style:hover{
-  border: 1px solid transparent;
-}
-.shop_item.home6_style .details .si_footer .price{
-  color: #F2B23E;
-}
-.shop_item.home6_style .details .si_footer .line:before{
-  background-color: #F2B23E;
-}
-.shop_item .details .si_footer .cart_btn,
-.shop_item.home10_style .details .si_footer .cart_btn{
+
+.shop_item .details .si_footer .cart_btn{
   bottom: -15px;
   font-family: Lato;
   font-size: 13px;
@@ -20989,17 +20963,7 @@ height:250px;*/
   right: 0;
   width: 100%;
 }
-.shop_item.home10_style.style2 .details .si_footer .cart_btn{
-  background-color: #86BC42;
-  bottom: 0;
-  color: #fff;
-}
-.shop_item.home10_style.style2 .details .si_footer .cart_btn:hover,
-.shop_item.home10_style.style2 .details .si_footer .cart_btn:active,
-.shop_item.home10_style.style2 .details .si_footer .cart_btn:focus{
-  background-color: #6F9D34;
 
-}
 .shop_item .details .si_footer .cart_btn.home5_style3{
   border-radius: 60px;
   font-family: Lato;
@@ -21146,137 +21110,9 @@ height:250px;*/
 .shop_item.list_style .thumb_info ul li:hover{
   border: 1px solid #86BC42;
 }
-.shop_item.home3_style2{
-  padding-top: 0;
-}
-.shop_item.home3_style2:hover{
-  border: 1px solid transparent;
-}
-.shop_item .thumb_info.home3_style ul li:hover{
-  border: 1px solid #CF3E3B;
-}
-.shop_item .thumb_info.home3_style ul li:hover a{
-  color: #CF3E3B;
-}
-.shop_item.home3_style2.home4 .thumb img{
-  margin: 0 auto;
-  max-width: 200px;
-  width: 100%;
-}
-.shop_item.home5_style,
-.shop_item.home5_style:hover{
-  border: none;
-}
-.shop_item.home7_style{
-  padding: 0 20px 30px;
-}
-.shop_item.home7_style:hover{
-  border: 1px solid transparent;
-}
-.shop_item.home3_style2 .thumb_info,
-.shop_item.home7_style .thumb_info{
-  top: 15px;
-}
-.home8_style.shop_item .details .si_footer .line:before{
-  background-color: #86BC42;
-}
-.home8_style.shop_item.single_slider.no_border,
-.shop_item.home8_style.no_border{
-  border: none;
-}
-.home8_style.shop_item.single_slider{
-  border: 2px solid #FFD96A;
-}
-.shop_item.home8_style{
-  margin-bottom: 30px;
-}
-.shop_item.home8_style.no_transform .cart_btn{
-  filter: alpha(opacity=100);
-  visibility: visible;
-  -webkit-transform: translateY(-10px);
-  -ms-transform: translateY(-10px);
-  -o-transform: translateY(-10px);
-  transform: translateY(-10px);
-}
-.shop_item.home8_style.middle_item .thumb img{
-  margin: 0 auto;
-  max-width: 120px;
-  width: 100%;
-}
-.shop_item.home8_style .details .si_footer .cart_btn{
-  border-radius: 45px;
-  color: #121212;
-}
-.shop_item.home8_style .details .si_footer .cart_btn.op1{
-  opacity: 1;
-}
-.shop_item.home9_style2:hover{
-  border: 1px solid transparent;
-}
-.shop_item.home9_style2:hover .si_footer .price{
-  opacity: 1;
-}
-.shop_item.home9_style2 .details .si_footer .cart_btn.op1{
-  opacity: 1;
-  position: relative;
-}
-.shop_item.home9_style1{
-  border: 1px solid #ebebeb;
-  padding: 0;
-  position: relative;
-}
-.shop_item.home9_style1 .thumb_info{
-  right: 10px;
-  top: 20px;
-}
-.shop_item.home9_style1 .thumb,
-.shop_item.home9_style1 .details .wrapper{
-  padding: 30px 20px 0;
-}
-.shop_item.home9_style1 .details .si_footer{
-  padding-bottom: 10px;
-}
-.shop_item.home9_style1 .details .si_footer .cart_btn{
-}
-.shop_item.home10_style .details .si_footer ul{
-  left: 0;
-  margin: 0 auto;
-  position: absolute;
-  opacity: 0;
-  right: 0;
-  top: 0;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-.shop_item.home10_style:hover .details .si_footer ul{
-  opacity: 1;
-}
-.shop_item.home10_style .details .si_footer ul li{
-  margin-right: 1px;
-  vertical-align: bottom;
-}
-.shop_item.home10_style .details .si_footer ul li a{
-  background-color: #EBEBEB;
-  border-radius: 4px;
-  color: #4F4F4F;
-  display: block;
-  height: 45px;
-  line-height: 45px;
-  margin-bottom: -10px;
-  width: 45px;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-.shop_item.home10_style .details .si_footer ul li .cart_btn{
-  position: relative;
-  width: 160px;
-}
+
+
+
 /* Onlnie Delivery Css */
 .online_delivery{
   background-color: #FAFAEB;
@@ -21424,9 +21260,7 @@ height:250px;*/
   margin-right: 20px;
   margin-top: -12px;
 }
-.mailchimp_widget.home2 .icon{
-  color: #86BC42;
-}
+
 .mailchimp_widget .details .title{
   color: #FFFFFF;
   font-family: Signika;
@@ -21437,12 +21271,7 @@ height:250px;*/
   letter-spacing: 0em;
   margin-bottom: 0;
 }
-.mailchimp_widget.home2 .details .title{
-  color: #121212;
-}
-.mailchimp_widget.home2 .details .para{
-  color: #4F4F4F;
-}
+
 .mailchimp_widget .details .para{
   color: #FFFFFF;
   font-size: 14px;
@@ -21452,15 +21281,7 @@ height:250px;*/
   letter-spacing: 0em;
   margin-bottom: 0;
 }
-.mailchimp_widget.home6 .icon{
-  color: #F2B23E;
-}
-.mailchimp_widget.home6 .details .title{
-  color: #121212;
-}
-.mailchimp_widget.home6 .details p{
-  color: #4F4F4F;
-}
+
 /* Store locator page css */
 .sidebar_store_location{
   position: relative;
@@ -21597,10 +21418,7 @@ height:250px;*/
 .shop_single_sidebar{
   position: relative;
 }
-.icon_boxes.home3_style,
-.icon_boxes.home6_style{
-  border: none;
-}
+
 .icon_boxes{
   border: 1px solid #ebebeb;
   border-radius: 4px;
@@ -21617,29 +21435,7 @@ height:250px;*/
 .icon_boxes .icon span{
   color: #121212;
 }
-.icon_boxes.home6_style .icon span{
-  color: #F2B23E;
-}
-.icon_boxes.home7_style{
-  border: none;
-}
-.icon_boxes.home7_style.rafter:before{
-  background-color: rgba(255, 255, 255, 0.2);
-  bottom: 0;
-  content: "";
-  height: 90px;
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 1px;
-}
-.icon_boxes.home7_style .icon span{
-  color: #fff;
-}
-.icon_boxes.home7_style .details .title,
-.icon_boxes.home7_style .details .para{
-  color: #fff;
-}
+
 .icon_boxes .details .title{
   font-family: Lato;
   font-size: 14px;
@@ -21658,32 +21454,7 @@ height:250px;*/
   letter-spacing: 0em;
   margin: 0;
 }
-.icon_box_home8_style{
-  margin-bottom: 30px;
-  padding: 20px 0;
-  position: relative;
-  text-align: center;
-}
-.icon_box_home8_style:hover{
-  background-color: #FFD96A;
-  border-radius: 4px;
-}
-.icon_box_home8_style:hover .icon{
-  color: #121212;
-}
-.icon_box_home8_style .icon{
-  color: #86BC42;
-  font-size: 38px;
-}
-.icon_box_home8_style .details .title{
-  color: #121212;
-  font-family: Lato;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 24px;
-  letter-spacing: 0em;
-}
+
 .bestseller_sidebar_slider,
 .feature_product_slider,
 .shop_item_1grid_slider,
