--- a/SuperMarket_Client/Areas/Admin/Views/Product/updateProduct.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Product/updateProduct.cshtml
@@ -4,7 +4,7 @@
 }
 <h3>@ViewData["Title"]</h3>
 <div>
-<span>@ViewBag.msg</span>
+<span class="text-danger">@ViewBag.msg</span>
 	<div class="col-md-8 offset-2">
 		<form asp-action="Update" class="row" enctype="multipart/form-data">
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
