--- a/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
@@ -110,7 +110,7 @@
 												{
 													if (Image.IsMainImage == true)
 													{
-														<img src="@Image.Url" alt="fp1.png">
+														<img src="@Image.Url" loading="lazy" alt="fp1.png">
 													}
 												}
 												<div class="thumb_info">
