--- a/SuperMarket_Client/Areas/Customer/Views/Product/Details.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Product/Details.cshtml
@@ -283,14 +283,14 @@
                                         }
                                         <div class="thumb_info">
                                             <ul class="mb0">
-                                                <li  data-toggle="tooltip" data-placement="top" title="View Detail">
+                                                <li  class="btn-color" data-toggle="tooltip" data-placement="top" title="View Detail">
 															<a href="/Customer/Product/Details?id=@item.ProductId">
 																<i class="fa fa-info-circle" aria-hidden="true"></i>
 															</a>
 														</li>
 
-														<li  data-toggle="tooltip" data-placement="top" title="Compare Product">
-															<a href="/Customer/Product/CompareProduct?CategoryId=@item.Product.Brand_Category.CategoryId&amp;productId=@item.ProductId"><span class="flaticon-search"></span></a>
+														<li  class="btn-color" data-toggle="tooltip" data-placement="top" title="Compare Product">
+															<a href="/Customer/Product/CompareProduct?CategoryId=@item.Product.Brand_Category.CategoryId&amp;productId=@item.ProductId"><i class="fa fa-balance-scale" aria-hidden="true"></i></a>
 														</li>
                                             </ul>
                                         </div>
