--- a/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
+++ b/SuperMarket_Client/Areas/Customer/Views/Home/Index.cshtml
@@ -115,14 +115,14 @@
 												}
 												<div class="thumb_info">
 													<ul class="mb0">
-														<li  data-toggle="tooltip" data-placement="top" title="View Detail">
+														<li  class="btn-color" data-toggle="tooltip" data-placement="top" title="View Detail">
 															<a href="/Customer/Product/Details?id=@data.ProductId">
 																<i class="fa fa-info-circle" aria-hidden="true"></i>
 															</a>
 														</li>
 
-														<li  data-toggle="tooltip" data-placement="top" title="Compare Product">
-															<a href="/Customer/Product/CompareProduct?CategoryId=@data.Product.Brand_Category.CategoryId&amp;productId=@data.ProductId"><span class="flaticon-search"></span></a>
+														<li  class="btn-color"  data-toggle="tooltip" data-placement="top" title="Compare Product">
+															<a href="/Customer/Product/CompareProduct?CategoryId=@data.Product.Brand_Category.CategoryId&amp;productId=@data.ProductId"><i class="fa fa-balance-scale" aria-hidden="true"></i></a>
 														</li>
 													</ul>
 												</div>
@@ -187,7 +187,7 @@
 																	</a>
 																</li>
 
-																<li  data-toggle="tooltip" data-placement="top" title="Compare Product">
+																<li  class="btn-color" data-toggle="tooltip" data-placement="top" title="Compare Product">
 																	<a href="/Customer/Product/CompareProduct?CategoryId=@data.Product.Brand_Category.CategoryId&amp;productId=@data.ProductId"><span class="flaticon-search"></span></a>
 																</li>
 															</ul>
