--- a/SuperMarket_Client/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Views/Shared/_Layout.cshtml
@@ -244,7 +244,9 @@
 									<img src="~/Asset/images/logoSuperMarket.png" alt="logoSuperMarket.png">
 								</a>
 							</div>
-							<p> Cach Mang Thang Tam <br> 580, VietNam.</p>
+							
+							<p>HEAD OFFICE: <br> Cach Mang Thang Tam <br> 580, VietNam.</p>
+
 							<a href="/Customer/StoreLocator/Index" class="shop_map_btn">SHOW ON MAP</a>
 						</div>
 						<div class="footer_social_widget mt30">
