--- a/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>SB Admin 2 - Dashboard</title>
+	<title>KTK Admin - Dashboard</title>
 
 	<!-- Custom fonts for this template-->
 	<link href="~/Asset/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -31,6 +31,8 @@
 	<link href="~/Asset/css/sb-admin-2.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.syncfusion.com/ej2/20.2.43/material.css" />
 	<script src="https://cdn.syncfusion.com/ej2/20.2.43/dist/ej2.min.js"></script>
+	<link href="~/Asset/images/favicon.ico" sizes="128x128" rel="shortcut icon" type="image/x-icon" />
+	<link href="~/Asset/images/favicon.ico" sizes="128x128" rel="shortcut icon" />
 </head>
 
 <body id="page-top">
