--- a/SuperMarket_Client/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SuperMarket_Client/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,55 +2,64 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+	ViewData["Title"] = "Log in";
 }
 
-
 <div class="row">
-    <div class="col-4 offset-4">
-        <section class="login_form">
-            <form id="account" method="post">
-                <h1 class="text-center">Sign In</h1>
-                <hr />
-                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-floating">
-                    <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                    <label asp-for="Input.Email" class="form-label"></label>
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-floating">
-                    <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-                    <label asp-for="Input.Password" class="form-label"></label>
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div>
-                    <div class="checkbox" style="display:flex;justify-content:space-between;">
-                        <label asp-for="Input.RememberMe" class="form-label">
-                            <input class="form-check-input" asp-for="Input.RememberMe" />
-                            @Html.DisplayNameFor(m => m.Input.RememberMe)
-                        </label>
+	<div class="col-4 offset-4">
+		<section class="login_form">
+			<form id="account" method="post">
+				<h1 class="text-center">Sign In</h1>
+				<hr />
+				<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+				<div class="form-floating">
+					<input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
+					<label asp-for="Input.Email" class="form-label"></label>
+					<span asp-validation-for="Input.Email" class="text-danger"></span>
+				</div>
+				<div class="form-floating">
+					<input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
+					<label asp-for="Input.Password" class="form-label"></label>
+					<span asp-validation-for="Input.Password" class="text-danger"></span>
+				</div>
+				<div>
+					<div class="checkbox" style="display:flex;justify-content:space-between;">
+						<label asp-for="Input.RememberMe" class="form-label">
+							<input class="form-check-input" asp-for="Input.RememberMe" />
+							@Html.DisplayNameFor(m => m.Input.RememberMe)
+						</label>
 
-                         <label class="btn-fpswd float-end">
-                            <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                        </label>
-                    </div>
-                </div>
-                <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-log btn-thm mt10 mb10">Sign In</button>
-                </div>
-                <div style="display:flex;justify-content:space-between;" class="mt15">
-                    <label>
-                        <a class="btn-fpswd float-end" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
-                    </label>
-                    <label>
-                        <a class="btn-fpswd float-end" id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
-                    </label>
-                </div>
-            </form>
-        </section>
-    </div>
+						<label class="btn-fpswd float-end">
+							<a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+						</label>
+					</div>
+				</div>
+				<div>
+					<button id="login-submit" type="submit" class="w-100 btn btn-lg btn-log btn-thm mt10 mb10">Sign In</button>
+				</div>
+			</form>
+			<div>
+					<form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
+						<div>
+							<p>
+								@foreach (var provider in Model.ExternalLogins)
+								{
+									<button type="submit" class="w-100 btn btn-lg btn-log btn-thm mt10 mb10" style="background-color:blue" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+								}
+							</p>
+						</div>
+					</form>
+				</div>
+				<div style="display:flex;justify-content:space-between;" class="mt15">
+					<label>
+						<a class="btn-fpswd float-end" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+					</label>
+				</div>
+		</section>
+
+	</div>
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+	<partial name="_ValidationScriptsPartial" />
 }
