--- a/SuperMarket_Client/Areas/Admin/Views/Order/Index.cshtml
+++ b/SuperMarket_Client/Areas/Admin/Views/Order/Index.cshtml
@@ -27,7 +27,7 @@
 			Cancelling Order
 		</a>
 		<a class="option" asp-action="Index" asp-controller="Order" asp-area="Admin" asp-route-status="other">
-			Pedding Order
+			Others Order
 		</a>
 
 	</div>
