--- a/SuperMarket_Client/Areas/Identity/Pages/Account/Login.cshtml
+++ b/SuperMarket_Client/Areas/Identity/Pages/Account/Login.cshtml
@@ -44,7 +44,7 @@
 						<p>
 							@foreach (var provider in Model.ExternalLogins)
 							{
-								<button type="submit" class="w-100 btn btn-lg btn-log btn-thm mt10 mb10" style="background-color:blue" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
+								<button type="submit" class="w-100 my-signin2" data-width="300" data-height="200" data-longtitle="true" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
 							}
 						</p>
 					</div>
